# MoxRelay

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DeployRuntime.cmake  Packaging.cmake
docs/: building.md  cli.md  control-api.asyncapi.yaml  control-api.md  spout-receiving.md  usage.md
examples/: fleet-demo.json  sources-demo.json
examples/contract-test/: README.md  contract_test.py
packaging/: SOURCES.txt  SOURCES.txt.in  THIRD-PARTY-NOTICES.txt
packaging/licenses/Qt6/: LICENSE.LGPL3
packaging/licenses/msvc-runtime/: REDIST.txt
resources/: resources.qrc
resources/icons/: README.md  moxrelay-version.rc.in  moxrelay.rc
resources/theme/: dark.qss
scripts/: bootstrap-deps.ps1
src/: main.cpp
src/app/: AppSettings.cpp  AppSettings.hpp  CliOptions.cpp  CliOptions.hpp  DeviceArrivalWatch.cpp  DeviceArrivalWatch.hpp  HelperConfig.cpp  HelperConfig.hpp  LogSink.cpp  LogSink.hpp  ObsBootstrap.cpp  ObsBootstrap.hpp  ParentWatch.cpp  ParentWatch.hpp  ProfileStore.cpp  ProfileStore.hpp  RendezvousPipe.cpp  RendezvousPipe.hpp  SpoutNaming.cpp  SpoutNaming.hpp
src/audio/: AudioDeviceNotify.cpp  AudioDeviceNotify.hpp  AudioMixEngine.cpp  AudioMixEngine.hpp  AudioRing.hpp  ServoTrimLogic.hpp  ServoTrimSim.cpp  ServoTrimSim.hpp
src/control/: AudioDevices.cpp  AudioDevices.hpp  ControlServer.cpp  ControlServer.hpp  ControlToken.hpp  ControlVerbs.cpp  ControlVerbs.hpp  TypeVocabulary.cpp  TypeVocabulary.hpp
src/obs/: SourceFactory.cpp  SourceFactory.hpp
src/perf/: PerfHarness.cpp  PerfHarness.hpp
src/spout/: SenderNameAllocator.cpp  SenderNameAllocator.hpp  SpoutSenderEngine.cpp  SpoutSenderEngine.hpp
src/ui/: AudioMixerStrip.cpp  AudioMixerStrip.hpp  FilterInspector.cpp  FilterInspector.hpp  MainWindow.cpp  MainWindow.hpp  MoxDisplayWidget.cpp  MoxDisplayWidget.hpp  PreviewConsumeEngine.cpp  PreviewConsumeEngine.hpp  PropertyPanel.cpp  PropertyPanel.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SliderJumpStyle.hpp  TrayController.cpp  TrayController.hpp  WheelGuard.hpp
